# LLM-playground

./: .gitignore  README.md  environment.yml  pyproject.toml
apps/: simple-chat-panel.py
experiments/mlruns/0/: meta.yaml
jobs/: finetune-qlora.py
notebooks/: 1-inference-python-clients.md  1-inference-service-fastapi.md  1-inference-service-tgi.md  1-inference-service-tgi✨.md  1-inference-services.md  101-Inference-python-clients.md  102-inference-services.md  103-Inference-services.md  103-inference-services.md  7-finetune-llm-sft.md  7-finetune-llm-sft✨.md  7-finetune-sentence-transformers.md  701-finetune-sentence-transformers.md  702-finetune-llm-lora.md  702-finetune-llm-sft.md  703-finetune-llm-qlora-dpo.md  local-gpu-client.md
notebooks/suppl/: 7-finetune-llm-sft-cpu.md
scripts/: jupyter.bat  mlflow.bat  tensorboard.bat
scripts/apps/: inference-panel-ctransformers.py  inference-panel.py  simple-chat-panel.py
scripts/apps/conf/: inference-panel-ctransformers.yaml  inference-panel-langchain.py  inference-panel-langchain.yaml  inference.yaml
scripts/jobs/: finetune-qlora.py
scripts/services/: fastapi-service.bat  fastapi-service.py  qdrant-db-creation.sh  qdrant-db.sh  simple-llm-fastapi-service.py  tgi-service-creation.sh  tgi-service.bat  tgi-service.sh
scripts/services/tgi/: tgi-service.sh
src/llmtools/trainers/: sentence_transformers_trainers.py
